--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 Django==2.2.13
+django-filter==2.3.0
+djangorestframework==3.11.1
+djangorestframework-simplejwt==4.4.0
+Markdown==3.2.2
+Pillow==7.2.0
+PyJWT==1.7.1
 pytz==2018.9
-Pillow==6.2.0
+sqlparse==0.3.1
